--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="public/favicon.svg"/>
+  <link rel="icon" type="image/svg+xml" href="public/images/favicon.svg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AA Archigroup</title>
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -14,7 +14,7 @@
 <body>
 <div class="wrapper">
   <h1 class="login-ci">
-    <img src="public/login-ci.svg" alt="AA Archigroup">
+    <img src="public/images/login-ci.svg" alt="AA Archigroup">
     <div class="login-slogan">탄탄한 기술력으로 쌓아온 신뢰의 기반 위에<br>한 차원 높은 디자인 경쟁력으로 시장을 선도하는 혁신의 글로벌 디자인 名家</div>
   </h1>
   <section class="login-form-wrapper">
