feat: svg 파일 활용 방식 변경
- svg 파일을 `svg` 형식과 `data-uri` 형식 으로 모두 활용 가능하도록 수정
- 사이즈 오류를 가지고 있던 svg 파일 수정

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <global-menu-tree></global-menu-tree>
 <!-- page content container:start -->
 <page-container title="실적명세서 조회"
-                search="show" add="show" delete="show" excel="hide" save="show" print="disabled">
+                search="show" add="show" delete="show" excel="show" save="show" print="show">
   <!-- page content:start -->
   <div id="gridContainer"></div>
 
