fix: 적용 폰트 정리

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <div class="login-slogan">탄탄한 기술력으로 쌓아온 신뢰의 기반 위에<br>한 차원 높은 디자인 경쟁력으로 시장을 선도하는 혁신의 글로벌 디자인 名家</div>
   </h1>
   <section class="login-form-wrapper">
-    <login-form id="login"></login-form>
+    <login-form></login-form>
     <footer>COPYRIGHT &copy; 2024 AA Archigroup Inc. ALL RIGHTS RESERVED</footer>
   </section>
   <script type="text/javascript">
