--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AA Archigroup</title>
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-  <link rel="stylesheet" href="src/normalize.css"/>
-  <link rel="stylesheet" href="src/global.css"/>
-  <link rel="stylesheet" href="src/main.css"/>
+  <link rel="stylesheet" href="/css/normalize.css"/>
+  <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="/IBSheet8/css/gray/main.css">
+  <link rel="stylesheet" href="src/main.css"/>
   <script type="module" src="src/components/global-header.ts"></script>
   <script type="module" src="src/components/global-nav-bar.ts"></script>
   <script type="module" src="src/components/user-info.ts"></script>
