fix: layout 컴포넌트 디렉토리 이동

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <link rel="stylesheet" href="/IBSheet8/css/gray/main.css">
   <link rel="stylesheet" href="src/main.css"/>
   <script type="module" src="src/components/components.ts"></script>
-  <script type="module" src="src/components/global-header.ts"></script>
-  <script type="module" src="src/components/global-nav-bar.ts"></script>
-  <script type="module" src="src/components/user-info.ts"></script>
-  <script type="module" src="src/components/global-menu-tree.ts"></script>
-  <script type="module" src="src/components/page-container.ts"></script>
+  <script type="module" src="src/layouts/layouts.ts"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="/IBSheet8/ibsheet.js" type="text/javascript"></script>
   <script src="/IBSheet8/ibleaders.js"></script>
