--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="src/login.css"/>
   <script type="module" src="src/components/components.ts"></script>
-  <script type="module" src="src/components/login-form.ts"></script>
+  <script type="module" src="src/layouts/login-form.ts"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
